# SMP-RP2040-Free-RTOS

./: readme.md
smp-freertos-template/: CMakeLists.txt  CMakeLists.txt.remove  FreeRTOSConfig.h  main.cpp  rtos_hooks.cpp
